css/styles.css
/*Defining General Styles*/

html{
    font-size: 62.5%;
}

body{
    font-size: 1.8rem;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/*Styles for the navigation bar*/ 
header{
    display: flex;
    background-color: rgb(42, 158, 236);
    padding: 0.5rem 2rem;
    justify-content: space-between;
    align-items: center;
}

nav{
    display: flex;
}

h2{
    color: #fff;
}


ul{
    display: flex;
}


a{
    text-decoration: none;
}



.nav-item {
    color: #fff;
    font-weight: 500;
    margin-right: 4rem;
    transition: scale .2s;
}

.nav-item:hover{
    scale: 1.2;
}

.message{
    padding: 8rem;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}


/*Styles for the List of Products*/
.product-container{
    padding: 2rem;
    display: grid;
    grid-template-columns: repeat(3, minmax(200px, 1fr));
    row-gap: 10px;
    column-gap: 10px;
    margin-top: 2rem;
    justify-items: center;
}

.product-card{
    border: solid 1px dodgerblue;
    border-radius: 60px;
    box-shadow: 0 0 0 10px rgba(57, 145, 251,0.1);
    display: flex;
    flex-direction:column ;
    justify-content: space-between;
    align-items: center;
    width: 300px;
    white-space: wrap;
    padding: 3rem;
    margin: 2.5rem 1.5rem;
    transition: scale 0.2s;
}

.product-card:hover{
    scale: 1.05;
}

.product-card h3{
    font-size: 1.5rem;
}

.product-card p{
    font-weight: bold;
}

.product-card-image{
    width: 300px;
    height: 200px;
    object-fit: contain;
}

.addToCart-btn{
    padding: 1rem 2rem;
    border: 0;
    border-radius: 30px;
    background-color: dodgerblue;
    color: #fff ;
    transition: background-color 0.15s;
}

.addToCart-btn:hover{
    background-color: rgb(0, 124, 247);
}

